# Classis

./: CMakeLists.txt  Classis.cpp  Classis.h  Fight.cpp  Fight.h  Person.cpp  Person.h
src/: Classis.cpp  Classis.h  Fight.cpp  Fight.h  Person.cpp  Person.h
